k8s/web-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: craft-folio-gotchi-web
  labels:
    name: craft-folio-gotchi-web
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 'http'
  selector:
    name: craft-folio-gotchi-web
